[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/MoonGateScalingDownState.gd" type="Script" id=1]
[ext_resource path="res://Scripts/MoonGateBigState.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MoonGateSpinningState.gd" type="Script" id=3]
[ext_resource path="res://Scripts/MoonGateDamageableState.gd" type="Script" id=4]
[ext_resource path="res://Scripts/MoonGateFlyingState.gd" type="Script" id=5]
[ext_resource path="res://Scripts/MoonGateSmallState.gd" type="Script" id=6]
[ext_resource path="res://Scripts/MoonGate.gd" type="Script" id=7]
[ext_resource path="res://Scripts/MoonGateScalingUpState.gd" type="Script" id=8]
[ext_resource path="res://Scripts/MoonGateNotSpinningState.gd" type="Script" id=9]
[ext_resource path="res://Materials/ultraviolet_additive.tres" type="Material" id=10]
[ext_resource path="res://Materials/moon_gate_mat.tres" type="Material" id=11]
[ext_resource path="res://Animations/moon_scale.tres" type="Animation" id=12]
[ext_resource path="res://Meshes/moon.obj" type="ArrayMesh" id=13]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="Animation" id=2]
resource_name = "moon_fly"
tracks/0/type = "bezier"
tracks/0/path = NodePath("..:rotation_degrees:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 135, -0.25, 0, 0.25, 0, 135, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.6, 1 )
}

[sub_resource type="SphereShape" id=3]
radius = 0.66

[node name="Moon" type="Spatial"]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.56, 0 )
mesh = ExtResource( 13 )
material/0 = null
material/1 = null

[node name="Stick" type="MeshInstance" parent="."]
transform = Transform( -1.62921e-08, -0.25, 0, 0.1, -4.07302e-08, 0, 0, 0, 0.1, -0.651095, 0.56, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="MoonGatePivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0.56, 0 )

[node name="MoonGate" type="Area" parent="MoonGatePivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, 0 )
monitoring = false
collision_layer = 0
collision_mask = 6
script = ExtResource( 7 )
impulse_strength = 8.0

[node name="ScaleAnimPlayer" type="AnimationPlayer" parent="MoonGatePivot/MoonGate"]
anims/moon_scale = ExtResource( 12 )

[node name="FlyAnimPlayer" type="AnimationPlayer" parent="MoonGatePivot/MoonGate"]
anims/moon_fly = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="MoonGatePivot/MoonGate"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="MoonGatePivot/MoonGate"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = ExtResource( 13 )
material/0 = ExtResource( 11 )
material/1 = ExtResource( 10 )

[node name="MovementStates" type="Spatial" parent="MoonGatePivot/MoonGate"]

[node name="Stationary" type="Spatial" parent="MoonGatePivot/MoonGate/MovementStates"]
script = ExtResource( 4 )

[node name="Flying" type="Spatial" parent="MoonGatePivot/MoonGate/MovementStates"]
script = ExtResource( 5 )

[node name="ScaleStates" type="Spatial" parent="MoonGatePivot/MoonGate"]

[node name="Small" type="Spatial" parent="MoonGatePivot/MoonGate/ScaleStates"]
script = ExtResource( 6 )

[node name="ScalingUp" type="Spatial" parent="MoonGatePivot/MoonGate/ScaleStates"]
script = ExtResource( 8 )

[node name="ScalingDown" type="Spatial" parent="MoonGatePivot/MoonGate/ScaleStates"]
script = ExtResource( 1 )

[node name="Big" type="Spatial" parent="MoonGatePivot/MoonGate/ScaleStates"]
script = ExtResource( 2 )

[node name="SpinStates" type="Spatial" parent="MoonGatePivot/MoonGate"]

[node name="Still" type="Spatial" parent="MoonGatePivot/MoonGate/SpinStates"]
script = ExtResource( 9 )

[node name="Spinning" type="Spatial" parent="MoonGatePivot/MoonGate/SpinStates"]
script = ExtResource( 3 )
[connection signal="death" from="MoonGatePivot/MoonGate" to="." method="_on_MoonGate_death"]
[connection signal="animation_finished" from="MoonGatePivot/MoonGate/ScaleAnimPlayer" to="MoonGatePivot/MoonGate" method="_on_ScaleAnimPlayer_animation_finished"]
[connection signal="animation_finished" from="MoonGatePivot/MoonGate/FlyAnimPlayer" to="MoonGatePivot/MoonGate" method="_on_FlyAnimPlayer_animation_finished"]
